test: refractor tests